Project Pamplet {
    database_type: 'mariadb'
}

Table User {
    id int [pk, increment]
    nickname varchar
    role_id int [ref: < Role.id]
}

Table Booth {
    id int [pk, increment]
    name varchar
    current_attendee_count int
    short_description varchar  
    long_description varchar
    status int
    image int [ref: < Image.id]
    tags_id int [ref: <> Tag.id]
    items_id int [ref: < Item.id]
    subscribe_user_id int [ref: <> User.id]
    evnet_id int [ref: < Event.id]
}

Table Tag {
    id int [pk, increment]
    name varchar
}

Table Item {
    id int [pk, increment]
    name varchar
    description varchar
    price int
    category varchar
    image int [ref: < Image.id]
    deletion_flag boolean
    last_updated datetime
}

Table Event {
    id int [pk, increment]
    name varchar
    like int
    liked_user_id int [ref: <> User.id]
}

Table Map {
    id int [pk, increment]
    name varchar
    image int [ref: < Image.id]
    sections_id int [ref: < Section.id]
}

Table Section {
    id int [pk, increment]
    name varchar
    block varchar
    level int
    booths_id int [ref: - Booth.id]
}

Table Exhibition {
    id int [pk, increment]
    name varchar
    manager_booth_id int [ref: - Booth.id]
    booth_id int [ref: < Booth.id]
    map_id int [ref: < Map.id]
}

Table Ticket {
    UUID varchr [pk, note: '이것을 알고 있으면 입장가능']
    name varchar
    price int
    description varchar
    role_i int [ref: < Role.id]
    exhibition_id int [ref: > Exhibition.id]
    user_id int [ref: < User.id]
}

Table Role{
    id int 
    department varchar
}

Table Image {
    id int [pk, increment]
    path varchar
}